--- a/index.html
+++ b/index.html
@@ -64,31 +64,86 @@
 
   <!-- category section -->
 
-  <section id="shop-by-categories">    
-    <i class="fa-solid fa-paw"></i>
-    <h2>Shop By Categories</h2>
+  <section id="shop-by-categories">
+    <h2>Shop by Categories</h2>
     <div class="categories-container">
-      
       <div class="category-item">
-        <img src="./assets/image/neddle.jpg" alt="Bird Food">
-        <p>Bird Food</p>
-      </div>
-      <div class="category-item">
-        <img src="./assets/image/hamster.jpg" alt="Hamster Food">
-        <p>Hamster Food</p>
-      </div>
-      <div class="category-item">
-        <img src="./assets/image/dog-removebg-preview.png" alt="Dog Food">
+        <svg className="absolute inset-0 w-full h-full" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <path fill="#F2C94C" d="M44.7,-76.4C58.8,-69.2,71.8,-59.1,79.6,-45.8C87.4,-32.5,90,-16.3,88.5,-1.5C87,13.3,81.4,26.7,73.6,38.4C65.8,50.1,55.8,60.1,43.7,67.9C31.6,75.7,17.3,81.2,1.6,78.9C-14.1,76.6,-30.1,66.5,-43.9,56.5C-57.7,46.5,-69.1,36.6,-75.9,23.4C-82.7,10.2,-84.8,-6.3,-81.9,-21.9C-79,-37.5,-71,-52.1,-59.2,-60.7C-47.4,-69.3,-31.8,-71.8,-17.8,-70.7C-3.8,-69.6,8.6,-64.8,22.9,-62.4C37.2,-60,53.5,-60,64.7,-53.5C75.9,-47,82,-34,44.7,-76.4Z" transform="translate(100 100)" />
+        </svg>
+        <img src="./assets/image/dog.png" alt="Category 1" />
         <p>Dog Food</p>
       </div>
       <div class="category-item">
-        <img src="./assets/image/cat-removebg-preview.png" alt="Cat Food">
+        <svg className="absolute inset-0 w-full h-full" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <path fill="red" d="M45.3,-77.1C58.9,-69.8,70.1,-57.5,77.8,-43.4C85.5,-29.3,89.7,-13.3,88.8,2.3C87.9,17.9,81.8,33.1,72.7,46C63.6,58.9,51.5,69.5,37.6,76.3C23.7,83.1,8,86.1,-7.4,85.1C-22.8,84.1,-37.9,79.2,-51.5,71.1C-65.1,63,-77.2,51.8,-84.4,37.7C-91.6,23.6,-93.9,6.6,-91.2,-9.2C-88.5,-25,-80.8,-39.6,-70.1,-51.4C-59.4,-63.2,-45.7,-72.2,-31.8,-78.8C-17.9,-85.4,-3.8,-89.6,9.2,-87.1C22.2,-84.6,43.3,-75.4,45.3,-77.1Z" transform="translate(100 100)" />
+        </svg>
+        <img src="./assets/image/hamster.png" alt="Category 2" />
+        <p>Hamster Food</p>
+      </div>
+      <div class="category-item">
+        <svg className="absolute inset-0 w-full h-full" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <path fill="#6C63FF" d="M45.9,-78.3C59.5,-71.3,70.8,-59.7,79.2,-46C87.6,-32.3,93.1,-16.1,92.3,-0.5C91.5,15.2,84.3,30.4,75.1,43.7C65.9,57,54.7,68.4,41.4,76.4C28.1,84.4,12.9,89,-2.4,88.5C-17.7,88,-35.4,82.4,-50.2,73.7C-65,65,-76.8,53.2,-84.4,38.9C-92,24.6,-95.3,7.8,-93.1,-8C-90.9,-23.8,-83.2,-38.6,-72.6,-50.2C-62,-61.8,-48.5,-70.2,-34.9,-76.8C-21.3,-83.4,-7.6,-88.2,6.5,-88.7C20.6,-89.2,41.2,-85.4,45.9,-78.3Z" transform="translate(100 100)" />
+        </svg>
+        <img src="./assets/image/cat.png" alt="Category 3" />
         <p>Cat Food</p>
+      </div>
+      <div class="category-item">
+        
+        <svg className="absolute inset-0 w-full h-full" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <path fill="green" d="M44.7,-76.4C58.8,-69.2,71.8,-59.1,79.6,-45.8C87.4,-32.5,90,-16.3,88.5,-1.5C87,13.3,81.4,26.7,73.6,38.4C65.8,50.1,55.8,60.1,43.7,67.9C31.6,75.7,17.3,81.2,1.6,78.9C-14.1,76.6,-30.1,66.5,-43.9,56.5C-57.7,46.5,-69.1,36.6,-75.9,23.4C-82.7,10.2,-84.8,-6.3,-81.9,-21.9C-79,-37.5,-71,-52.1,-59.2,-60.7C-47.4,-69.3,-31.8,-71.8,-17.8,-70.7C-3.8,-69.6,8.6,-64.8,22.9,-62.4C37.2,-60,53.5,-60,64.7,-53.5C75.9,-47,82,-34,44.7,-76.4Z" transform="translate(100 100)" />
+        </svg>
+        <img   src="./assets/image/parrot.png" alt="Category 4" />
+        <p>Bird Food</p>
       </div>
     </div>
   </section>
-
+  
   <!-- product section -->
+  <section class="promo-section">
+    <div class="container">
+        <div class="promo-flex">
+            <!-- Natural Freeze Card -->
+            <div class="promo-card card-1">
+                <div>
+                    <p class="card-title">Nature's Blend Foods</p>
+                    <h2 class="card-heading">Natural Freeze Dog Foods</h2>
+                    <a href="#" class="shop-btn">SHOP NOW</a>
+                </div>
+                <img  src="./assets/image/dog.png" alt="Natural Freeze Dog Food Package" class="product-image">
+            </div>
+
+            <!-- Branded Pet Accessories Card -->
+            <div class="promo-card card-2">
+                <div>
+                    <p class="card-title">Code: PETXY001</p>
+                    <h2 class="card-heading">Branded Pet Accessories</h2>
+                </div>
+                <img src="./assets/image/bird.png" alt="Pet Accessories" class="product-image">
+            </div>
+
+            <!-- Best Quality Pet Foods Card -->
+            <div class="promo-card card-3">
+                <div>
+                    <p class="card-title">Summer Sale Offer</p>
+                    <h2 class="card-heading">Best Quality Pet Foods</h2>
+                </div>
+                <img src="/placeholder.svg?height=150&width=150" alt="Quality Pet Food" class="product-image">
+            </div>
+
+            <!-- Discount Card -->
+            <div class="promo-card card-4">
+                <div>
+                    <p class="card-title">Big Offer All Foods</p>
+                    <h2 class="card-heading">Deal Up To 25% Discounts</h2>
+                    <a href="#" class="shop-btn">SHOP NOW</a>
+                </div>
+                <img src="/placeholder.svg?height=150&width=150" alt="Pet Food Discount" class="product-image">
+            </div>
+        </div>
+    </div>
+</section>
+  
    
   
   </header>
